# pga-shootout

./: .gitignore  CHANGELOG.md  DATA_MANIFEST.md  DEMARRER_PGA_SHOOTOUT.bat  PROJECT_CONTEXT.md  README.md  ROADMAP.md  pyproject.toml
docs/: ABILITY_AUDIT.md  DSL_ARCHITECTURE.md  ENGINE_PRIMITIVES.md  ENGINE_READINESS.md  FIRST_RUN.md  GAMESTATE.md  INTERACTIVE_CLI.md  INVENTORY_STATUS.md  MECHANIC_COVERAGE.md  OPTIMIZER_API.md  PATTERN_DASHBOARD.md  PRIMITIVE_ROADMAP.md  PROJECT_STATUS.md  RECOMMENDATION_ENGINE.md  REFERENCE_BAG_GAPS.md  USER_GAPS.md  VALUE_WEIGHTING_API.md
tests/: helpers.py  test_absent_types_stat_bonus.py  test_adjacent_power.py  test_bag_bounce_reduction.py  test_bag_comparison.py  test_bag_evaluation.py  test_bag_rarity_boost.py  test_bag_recklessness.py  test_bag_stat_bonuses.py  test_bounce_reduction.py  test_brand_loyalty_pipeline.py  test_brand_loyalty_steward.py  test_brand_wide_power.py  test_cli.py  test_comparison_diagnostic.py  test_conditions.py  test_coverage.py  test_data_validation.py  test_delayed_chains.py  test_driver_loyalty.py  test_engine.py  test_fellowship.py  test_interactive_recommendation.py  test_inventory_status.py  test_left_neighbor_stat_boost.py  test_loader.py  test_matching_targets_and_source_pattern.py  test_mirage_bounces.py  test_normalization.py  test_optimizer_api.py  test_owned_static_modifiers.py  test_placement_recommendation.py  test_plasma_arc.py  test_product_golden.py  test_recommendation.py  test_reference_gap_report.py  test_static_loft_modifiers.py  test_user_data.py  test_user_gap_report.py  (+3 more)
(+54 files in other folders)
