[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pga-shootout"
version = "0.1.0"
description = "Data-driven PGA TOUR Golf Shootout simulation engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "PGA Shootout contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
pga-shootout = "pga_shootout.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["pga_shootout"]
